fixed z-indexes for new drawer

--- a/app/stylus/layout.styl
+++ b/app/stylus/layout.styl
@@ -37,6 +37,7 @@ body.scrolled .nicescroll-rails
   position fixed!important
   cursor s-resize!important
   top 190px!important
+  z-index 8!important
 
 .close, .onclick-close
   opacity 0
@@ -73,7 +74,7 @@ header
   position fixed
   height header-height
   top 0
-  z-index 9
+  z-index 10
   .container
     width 800px
     margin 0 auto
